--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,6 +1,6 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/nuje2873/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/nuje2873/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/oqzsdozrn/a513i" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/oqzsdozrn/y11i" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/oqzsdozrn/k12n" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/oqzsdozrn/x8v" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/oqzsdozrn/l4n" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/oqzsdozrn/l12y" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/oqzsdozrn/f3q" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/oqzsdozrn/a10j" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/oqzsdozrn/z9x" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/oqzsdozrn/m7q" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/oqzsdozrn/f5f" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12212934.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/06/GettyImages-1213314129-1-320x200.jpg"><p align="center">【最新疫情6·28】美确诊病例破250万</p></a>
-<a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12212934.md#1" title="【最新疫情6·28】美确诊病例破250万""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/GettyImages-1213314129-1-320x200.jpg">&nbsp;</a>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/nuje2873/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/nuje2873/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/wkvcsmtqw/f513x" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/wkvcsmtqw/i11j" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/wkvcsmtqw/q12k" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/wkvcsmtqw/o8j" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/wkvcsmtqw/v4v" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/wkvcsmtqw/d12d" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/wkvcsmtqw/v3x" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/wkvcsmtqw/n10d" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/wkvcsmtqw/s9b" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/wkvcsmtqw/a7t" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/wkvcsmtqw/a5u" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12212934.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/06/Capture-13-320x200.jpg"><p align="center">【最新疫情6·28】全球病例逼近1000万</p></a>
+<a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12212934.md#1" title="【最新疫情6·28】全球病例逼近1000万""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/Capture-13-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216630.md#1" title="【瘟疫与中共】秘鲁疫情陡然飙升的背后""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/GettyImages-1217563323-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/28/n12216661.md#1" title="澳议员莫索尔曼如何成情报局调查对象？""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/2020-06-27-18266-20200626001476435792-original-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216563.md#1" title="分析：美国签证限制将制裁哪些中共官员""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-1214459805-320x200.jpg">&nbsp;</a>
@@ -13,18 +13,19 @@
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/5/23/n12131792.md#1" title="【康熙大帝】少年天子不动声色 智除鳌拜""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/Kang-Xi-cover-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12215121.md#1" title="【新闻看点】美国连9动作 领军国际抗共潮""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/09/190925151725100699-600x400-1-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/nuje2873/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://nuje2873.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>9分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/28/n12216804.md#1">澳洲调查中共干政 工党华人顾问家遭搜查</a><br>
-:clock8: <em>19分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/28/n12216895.md#1">中共全国人大代表申纪兰死亡</a><br>
-:clock8: <em>32分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216420.md#1">【一线采访】四川大暴雨亲历者谈惊魂一幕</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12212934.md#1">【最新疫情6·28】美确诊病例破250万</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/28/n12216751.md#1">防中共渗透控制 英国推出首个大学安全指南</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/28/n12216768.md#1">政府资助皇后镇旅游业8500万元</a><br>
+:clock8: <em>2分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12212934.md#1">【最新疫情6·28】全球病例逼近1000万</a><br>
+:clock8: <em>33分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/28/n12216804.md#1">澳洲调查中共干政 工党华人顾问家遭搜查</a><br>
+:clock8: <em>42分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/28/n12216895.md#1">中共全国人大代表申纪兰死亡</a><br>
+:clock8: <em>56分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216420.md#1">【一线采访】四川大暴雨亲历者谈惊魂一幕</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/28/n12216751.md#1">防中共渗透控制 英国推出首个大学安全指南</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/28/n12216768.md#1">政府资助皇后镇旅游业8500万元</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
-<a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12215064.md#1">大陆洪灾 台商被令限期捐钱 不堪重负回台</a><br>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12214374.md#1">30万燕郊人像蝼蚁爬向北京 文章被删</a><br>
+<a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12215064.md#1">大陆洪灾 台商被令限期捐钱 不堪重负回台</a><br>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215250.md#1">【翻墙必看】中共政治局常委与美方交手失败</a><br>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12213170.md#1">【翻墙必看】美参院全票通过《香港自治法》</a><br>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12214073.md#1">【现场视频】“老天怒了” 内蒙现巨型龙卷风</a><br>
+<a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216263.md#1">宜昌水深半人高 网民疑三峡大坝葛洲坝泄洪</a><br>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12213970.md#1">中共加大对台军事威胁 台湾强化反制能力</a><br>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12214879.md#1">普拉多3.5L大陆停产 丰田高端车型全离华</a><br>
 <br><p align="center"><a href="https://github.com/nuje2873/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
@@ -39,7 +40,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 358,802,489 人
+!共 358,804,122 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
@@ -104,7 +105,7 @@
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/23/n12207769.md#1">《蝙蝠侠》名导乔伊?舒马赫癌逝 享寿80岁</a><br>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/24/n12208086.md#1">蓬佩奥透露和杨洁篪会晤的真正原因</a><br>
 <br><p align="center"><a href="https://github.com/nuje2873/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/www/raw/master/v/2018-11-4/SY-Classical-Chinese-Dance-Technique-Collection-2018.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-11-12/zf-dsp-1128.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-1/st5-29.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/tzrs.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/er3n_3VVJ.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/XmL0_0XDL2p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/rs/NG8l.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/wt6Y_vPhM.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/vG2w_fwq.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O2jN_uD.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/C1WZ_mj.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/JZ5e_5Vusp.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/lyp/0iY.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/m1/raw/master/mjjy.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/c4rB_QQbr.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O23c_E.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nuje2873/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nuje2873/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nuje2873/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nuje2873/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nuje2873/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nuje2873/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nuje2873/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215402.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/06/EbaQDzMU4AAKE8R-320x200.jpg"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215402.md#1">“端点星”陈玫家属拒绝第二批官派律师</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215787.md#1">戈觉平判决书曝光 “证人”揭法院造假构陷</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215565.md#1">中国连续四年被列为贩卖人口最严重国家</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215427.md#1">刘贤斌出狱返家难 朋友前去迎接被抓</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215292.md#1">刘贤斌第三次出狱 妻子谈25年来聚散人生</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12214315.md#1">控告办案人违法 法轮功学员朱素荣家人遭报复</a><br><br><p align="center"><a href="https://github.com/nuje2873/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215762.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2019/12/3d2b03789bf94cc4eec31f44c4990b82-320x200.jpg"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215762.md#1">网文：大陆小麦比国际市场一斤贵0.4元</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215347.md#1">继达美复航后 美联航7月恢复美中航班</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215305.md#1">瑞幸咖啡宣布停牌准备退市 股价暴跌54%</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12214917.md#1">川普再谈中共对美国经济和大选的威胁</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12214643.md#1">英批准华为芯片研究机构申请 美发警告回应</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12214599.md#1">指一带一路中存在渎职和造假 巴国想重新谈判</a><br><br><p align="center"><a href="https://github.com/nuje2873/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216313.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/04/2004220933012378-320x200.jpg"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216313.md#1">中共官员破坏港自治 美议员欢迎白宫限制签证</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216321.md#1">许章润再发声 斥中共垄断思想 强拆艺术区</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215543.md#1">重新对外开放 中华民国总统府欢迎参观</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215456.md#1">【新闻热点追踪】肉博战后 印度要跟中共贸易脱钩</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12215108.md#1">美议员提法案 支持联邦职员赴台湾学习</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12214557.md#1">李锐黄万里儿女回顾父辈反对三峡大坝经历</a><br><br><p align="center"><a href="https://github.com/nuje2873/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216420.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/06/sichuan-1-320x200.jpg"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216420.md#1">【一线采访】四川大暴雨亲历者谈惊魂一幕</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216484.md#1">中共样板市爆疫情 雄安部分区域全封闭管理</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216263.md#1">宜昌水深半人高 网民疑三峡大坝葛洲坝泄洪</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216063.md#1">四川冕宁县特大暴雨 致3人死亡12人失联</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12214832.md#1">美16州中共病毒病例攀升 34州持稳</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12214856.md#1">【现场视频】四代耕种60年 政府称非法种地</a><br><br><p align="center"><a href="https://github.com/nuje2873/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/28/n12216833.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/28/n12216833.md#1">每日三退声明精选（2020/06/27）</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215316.md#1">每日三退声明精选（2020/06/26）</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12214829.md#1">聚焦高考顶替案 上海交大招生黑幕被重提</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12214393.md#1">中共病毒攻人体多个器官 一些患者无法全恢复</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12214051.md#1">四川一个月前发生枪击命案 嫌犯仍在逃</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12213079.md#1">每日三退声明精选（2020/06/25）</a><br><br><p align="center"><a href="https://github.com/nuje2873/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215664.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/06/2006270300242378-320x200.jpg"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215664.md#1">组图：渡海来台名画家 95高龄杜簦吟回顾展</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/23/n12207595.md#1">爆半年前秘产龙凤胎 唐嫣产后首度公布复工照</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/23/n12205642.md#1">搜集14万条学生个资 江阴培训机构被罚30万</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/22/n12205203.md#1">周星驰58岁生日 林允零点准时送祝福</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/22/n12205054.md#1">回应神似迪丽热巴 张雨绮：怎么样也是她像我</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/22/n12203873.md#1">重庆潼南米心镇8名小学生溺亡 多为女孩</a><br><br><p align="center"><a href="https://github.com/nuje2873/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215402.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/06/EbaQDzMU4AAKE8R-320x200.jpg"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215402.md#1">“端点星”陈玫家属拒绝第二批官派律师</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215787.md#1">戈觉平判决书曝光 “证人”揭法院造假构陷</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215565.md#1">中国连续四年被列为贩卖人口最严重国家</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215427.md#1">刘贤斌出狱返家难 朋友前去迎接被抓</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215292.md#1">刘贤斌第三次出狱 妻子谈25年来聚散人生</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12214315.md#1">控告办案人违法 法轮功学员朱素荣家人遭报复</a><br><br><p align="center"><a href="https://github.com/nuje2873/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215762.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2019/12/3d2b03789bf94cc4eec31f44c4990b82-320x200.jpg"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215762.md#1">网文：大陆小麦比国际市场一斤贵0.4元</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215347.md#1">继达美复航后 美联航7月恢复美中航班</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215305.md#1">瑞幸咖啡宣布停牌准备退市 股价暴跌54%</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12214917.md#1">川普再谈中共对美国经济和大选的威胁</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12214643.md#1">英批准华为芯片研究机构申请 美发警告回应</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12214599.md#1">指一带一路中存在渎职和造假 巴国想重新谈判</a><br><br><p align="center"><a href="https://github.com/nuje2873/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216313.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/04/2004220933012378-320x200.jpg"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216313.md#1">中共官员破坏港自治 美议员欢迎白宫限制签证</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216321.md#1">许章润再发声 斥中共垄断思想 强拆艺术区</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215543.md#1">重新对外开放 中华民国总统府欢迎参观</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215456.md#1">【新闻热点追踪】肉博战后 印度要跟中共贸易脱钩</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12215108.md#1">美议员提法案 支持联邦职员赴台湾学习</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12214557.md#1">李锐黄万里儿女回顾父辈反对三峡大坝经历</a><br><br><p align="center"><a href="https://github.com/nuje2873/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216420.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/06/sichuan-1-320x200.jpg"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216420.md#1">【一线采访】四川大暴雨亲历者谈惊魂一幕</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216484.md#1">中共样板市爆疫情 雄安部分区域全封闭管理</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12216063.md#1">四川冕宁县特大暴雨 致3人死亡12人失联</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12214832.md#1">美16州中共病毒病例攀升 34州持稳</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12214856.md#1">【现场视频】四代耕种60年 政府称非法种地</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12214393.md#1">中共病毒攻人体多个器官 一些患者无法全恢复</a><br><br><p align="center"><a href="https://github.com/nuje2873/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/28/n12216833.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/28/n12216833.md#1">每日三退声明精选（2020/06/27）</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215316.md#1">每日三退声明精选（2020/06/26）</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12214829.md#1">聚焦高考顶替案 上海交大招生黑幕被重提</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12214051.md#1">四川一个月前发生枪击命案 嫌犯仍在逃</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12213079.md#1">每日三退声明精选（2020/06/25）</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/25/n12212225.md#1">组图：北京城端午节 农民工无处去 睡街上</a><br><br><p align="center"><a href="https://github.com/nuje2873/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215664.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/06/2006270300242378-320x200.jpg"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/27/n12215664.md#1">组图：渡海来台名画家 95高龄杜簦吟回顾展</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/23/n12207595.md#1">爆半年前秘产龙凤胎 唐嫣产后首度公布复工照</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/23/n12205642.md#1">搜集14万条学生个资 江阴培训机构被罚30万</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/22/n12205203.md#1">周星驰58岁生日 林允零点准时送祝福</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/22/n12205054.md#1">回应神似迪丽热巴 张雨绮：怎么样也是她像我</a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/22/n12203873.md#1">重庆潼南米心镇8名小学生溺亡 多为女孩</a><br><br><p align="center"><a href="https://github.com/nuje2873/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/22/n12203800.md#1">【独家】北京疫情下 中共不愿公开的内容</a><br>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/17/n12192234.md#1">【独家】中共政府如何监控你的微博帖子</a><br>
 <a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/18/n12195087.md#1">【内幕】北京疫情再起 雄安新区心惊</a><br>
